# VMPK

./: .cproject  .project  AUTHORS  CMakeLists.txt  ChangeLog  NEWS  README  README.md  TODO  configure  configure.debug  distclean  gpl.rtf  lconvert.pri  net.sourceforge.VMPK.appdata.xml  net.sourceforge.VMPK.desktop  net.sourceforge.VMPK.metainfo.xml  qt.conf  setup-mingw.nsi  setup-msvc2010.nsi  setup-msvc2015-x64.nsi  setup-msvc2015-x86.nsi  setup-msvc2017-x64.nsi  setup-msvc2017-x86.nsi  setup-msvc2017.nsi.in  setup-msvc2019.nsi.in  setup-msvc2022.nsi.in  setup-vmpk-installbuilder.xml  updateqm.pri  vmpk.desktop  vmpk.pro  vmpk.spec.in
.github/workflows/: check-branches.yml  linux-build.yml
cmake_admin/: CompleteBundle.cmake.in  CreateBundle.sh.in  CreateManpages.cmake  DeploymentUtils.cmake  FindWindres.cmake  MacOSXBundleInfo.plist.in  SCMRevision.cmake  TranslationUtils.cmake  cmake_uninstall.cmake.in
data/: Info.plist.app  Serbian-cyr.xml  Serbian-lat.xml  azerty-FR.xml  azerty.xml  german.xml  gmgsxg.ins  help.html  help_de.html  help_es.html  help_fr.html  help_nl.html  help_ru.html  help_sr.html  help_tr.html  help_zh_CN.html  hm.html  hm_es.html  hm_ru.html  it-qwerty.xml  pc102mac.xml  pc102win.xml  pc102x11.xml  spanish.xml  txt2ins.awk  vkeybd-default.xml  vmpk.icns  vmpk.qrc
dbus/: README  bigben.sh  dbus-client.py  dbus-signal-receiver.py
man/: CMakeLists.txt  Makefile  vmpk.1  vmpk.xml
src/: CMakeLists.txt  RtMidi.cpp  RtMidi.h  about.cpp  about.h  about.ui  classicstyle.cpp  classicstyle.h  colordialog.cpp  colordialog.h  colordialog.ui  colorwidget.cpp  colorwidget.h  constants.h  events.h  extracontrols.cpp  extracontrols.h  extracontrols.ui  fluidsettingsdialog.cpp  fluidsettingsdialog.h  fluidsettingsdialog.ui  iconutils.cpp  iconutils.h  instrument.cpp  instrument.h  keyboardmap.cpp  keyboardmap.h  keylabel.cpp  keylabel.h  kmapdialog.cpp  kmapdialog.h  kmapdialog.ui  knob.cpp  knob.h  maceventhelper.h  maceventhelper.mm  macsynthsettingsdialog.cpp  macsynthsettingsdialog.h  macsynthsettingsdialog.ui  main.cpp  (+47 more)
translations/: CMakeLists.txt  vmpk_cs.ts  vmpk_de.ts  vmpk_en.ts  vmpk_es.ts  vmpk_fr.ts  vmpk_gl.ts  vmpk_it.ts  vmpk_nl.ts  vmpk_ru.ts  vmpk_sr.ts  vmpk_sv.ts  vmpk_tr.ts  vmpk_zh_CN.ts
